# synvinkel

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  patch_twscrape_db.py  pyproject.toml  visualize_movements.py
backend/app/: analyze_persons.py  collect_statements.py  config.py  database.py  main.py  seed.py
backend/app/analysis/: statement_analyzer.py
backend/app/api/: admin.py  analyze.py  articles.py  auth.py  export.py  factcheck.py  notes.py  router.py  sources.py  topics.py
backend/app/collectors/: riksdag.py  social_web.py
backend/app/enrichment/: topics.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  analysis.py  article.py  factcheck.py  organization.py  statement.py  topic.py  user.py
backend/app/schemas/: article.py  organization.py  topic.py
backend/app/scrapers/: arenaide.py  base.py  katalys.py  korp.py  nmi.py  reddit.py  riksdagen.py  sr.py  svensktnaringsliv.py  svt.py  svt_texttv.py  timbro.py
backend/app/services/: auth.py  deviation.py  factcheck.py  ingestor.py  nlp.py  url_analyzer.py
backend/app/tasks/: scrape.py
backend/data/seed/: organizations.json  persons.json  topics.json
data/seed/: organizations.json
docker/: init.sql
docs/: DEPLOY.md
frontend/: Dockerfile  astro.config.cf.mjs  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/: env.d.ts
frontend/src/components/: AdminDashboard.tsx  ArticleCard.astro  BiasBar.astro  DeviationBadge.astro  FactCheckBlock.tsx  (+6 more)
(+12 files in other folders)
